# mass_image_converter

./: Cargo.toml  README  README.md
src/: main.rs  specfic_errors.rs
