[package]
name = "mass_image_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = "0.24.7"
webp = "0.2.6"
thiserror = "1.0"
clap = { version = "4.1.8", features = ["derive"] }


[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
